--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="assets/icon-192x192.png">
     <meta name="theme-color" content="#4285f4">
+    <link rel="sitemap" type="application/xml" href="sitemap.xml">
 </head>
 <body>
     <header class="app-header">
