--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>图片压缩工具</title>
     <meta name="description" content="一款纯前端图片压缩工具，支持多种格式转换和压缩，保护您的隐私">
+    <meta name="keywords" content="图片压缩,图片优化,WebP转换,PNG压缩,JPEG压缩,在线工具,免费工具,隐私保护">
+    <meta name="author" content="图片压缩工具团队">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="图片压缩工具 - 在线免费压缩图片">
+    <meta property="og:description" content="一款纯前端图片压缩工具，支持多种格式转换和压缩，保护您的隐私">
+    <meta property="og:image" content="https://aixianyasuo.top/assets/social-preview.jpg">
+    <meta property="og:url" content="https://aixianyasuo.top">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="canonical" href="https://aixianyasuo.top">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="manifest" href="manifest.json">
@@ -13,6 +23,30 @@
     <link rel="apple-touch-icon" href="assets/icon-192x192.png">
     <meta name="theme-color" content="#4285f4">
     <link rel="sitemap" type="application/xml" href="sitemap.xml">
+    <!-- 结构化数据 -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "图片压缩工具",
+      "url": "https://aixianyasuo.top",
+      "description": "一款纯前端图片压缩工具，支持多种格式转换和压缩，保护您的隐私",
+      "applicationCategory": "MultimediaApplication",
+      "operatingSystem": "All",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "CNY"
+      },
+      "screenshot": "https://aixianyasuo.top/assets/social-preview.jpg",
+      "featureList": "图片压缩、格式转换、批量处理、隐私保护",
+      "author": {
+        "@type": "Organization",
+        "name": "图片压缩工具团队",
+        "url": "https://aixianyasuo.top/about.html"
+      }
+    }
+    </script>
 </head>
 <body>
     <header class="app-header">
@@ -161,6 +195,7 @@
             <div class="action-buttons">
                 <button class="btn btn-primary" id="downloadBtn">下载压缩图片</button>
                 <button class="btn" id="resetBtn">重新设置</button>
+                <button class="btn btn-secondary" id="shareBtn">分享工具</button>
             </div>
         </section>
 
@@ -191,7 +226,7 @@
             <div class="footer-links">
                 <a href="#" id="aboutLink">关于</a>
                 <a href="#" id="helpLink">帮助</a>
-                <a href="https://github.com/your-username/image-compressor" target="_blank">GitHub</a>
+                <a href="https://github.com/yuanjunxiao/imageCompression.git" target="_blank">GitHub</a>
             </div>
         </div>
     </footer>
@@ -251,5 +286,17 @@
             });
         }
     </script>
+    
+    <footer class="app-footer">
+        <div class="container">
+            <p>&copy; 2025 图片压缩工具 | <a href="about.html">关于我们</a> | <a href="privacy.html">隐私政策</a> | 
+            <a href="#" id="aboutLink">关于</a> | <a href="#" id="helpLink">帮助</a></p>
+            <p class="social-links">
+                <a href="https://github.com/yourusername/imageCompression" target="_blank" rel="noopener">GitHub</a> |
+                <a href="https://twitter.com/yourusername" target="_blank" rel="noopener">Twitter</a> |
+                <a href="https://www.producthunt.com/" target="_blank" rel="noopener">Product Hunt</a>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
