feat:接入Google Analytics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+    <!-- Google Analytics -->
+    <script>
+        window.gaTrackingId = 'G-SVTJJQ3G6E';
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>图片压缩工具</title>
