feat:完善配置信息

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="在线图片压缩工具 - 快速减小图片体积，保持高质量，支持JPG/PNG/WEBP格式，完全在浏览器中处理，保护您的隐私">
+    <meta name="keywords" content="图片压缩,在线压缩,图片优化,JPG压缩,PNG压缩,WEBP转换">
+    <meta property="og:title" content="ImageCompressor - 智能在线图片压缩工具">
+    <meta property="og:description" content="免费在线压缩图片，最高可减少80%文件体积，无需上传到服务器，完全在浏览器中处理">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://aixianyasuo.top">
+    <meta name="twitter:card" content="summary_large_image">
     <!-- Google Analytics -->
     <script>
         window.gaTrackingId = 'G-SVTJJQ3G6E';
@@ -51,6 +60,22 @@
       }
     }
     </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "ImageCompressor",
+  "url": "https://aixianyasuo.top",
+  "description": "免费在线图片压缩工具，无需上传到服务器，完全在浏览器中处理，保护您的隐私",
+  "applicationCategory": "UtilityApplication",
+  "operatingSystem": "Any",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  }
+}
+</script>
 </head>
 <body>
     <header class="app-header">
