--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
   }
 }
 </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SVTJJQ3G6E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-SVTJJQ3G6E');
+</script>
 </head>
 <body>
     <header class="app-header">
