--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ window.addEventListener('load', function() {
             <div class="footer-links">
                 <a href="#" id="aboutLink" data-i18n="footer.about">关于</a>
                 <a href="#" id="helpLink" data-i18n="footer.help">帮助</a>
-                <a href="https://github.com/yuanjunxiao/imageCompression.git" target="_blank" data-i18n="footer.github">GitHub</a>
+                <!-- <a href="https://github.com/yuanjunxiao/imageCompression.git" target="_blank" data-i18n="footer.github">GitHub</a> -->
             </div>
         </div>
     </footer>
@@ -357,7 +357,7 @@ window.addEventListener('load', function() {
             <p>&copy; 2025 图片压缩工具 | <a href="about.html">关于我们</a> | <a href="privacy.html">隐私政策</a> | 
             <a href="#" id="aboutLink">关于</a> | <a href="#" id="helpLink">帮助</a></p>
             <p class="social-links">
-                <a href="https://github.com/yourusername/imageCompression" target="_blank" rel="noopener">GitHub</a> |
+                <!-- <a href="https://github.com/yourusername/imageCompression" target="_blank" rel="noopener">GitHub</a> | -->
                 <a href="https://twitter.com/yourusername" target="_blank" rel="noopener">Twitter</a> |
                 <a href="https://www.producthunt.com/" target="_blank" rel="noopener">Product Hunt</a>
             </p>
